--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Connect with your friends, family or co-workers through Together.">
   <title>Iniciar Sesión - TOGETHER</title>
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -31,7 +33,7 @@
 
     <div class="auth-container">
       <div class="logo">
-        <img src="imagenes/TOGETHER.png"   class="logo-img">
+        <img src="imagenes/TOGETHER.png"   class="logo-img" alt="Logo">
       </div>
 
       <!-- INCIO SESION -->
