--- a/busqueda.html
+++ b/busqueda.html
@@ -17,7 +17,7 @@
 <nav class="vertical-navbar">
   <div class="text-center">
     <a class="navbar-brand" href="chat.html"> <!-- AQUI MERO VA LA IMAGEN -->
-      <img src="imagenes/TOGETHER.png"  class="navbar-logo img-fluid">
+      <img src="imagenes/TOGETHER.png"  class="navbar-logo img-fluid" alt="Logo">
     </a>
   </div>
   <ul class="nav flex-column">
@@ -65,32 +65,32 @@
       <div class="perfiles-list">
  
         <a href="perfil.html" class="perfil-card">
-          <img src="imagenes/USER.png"  " class="perfil-avatar">
-          <h3 class="perfil-name">Clark</h3>
+          <img src="imagenes/USER.png"  " class="perfil-avatar" alt="user1">
+          <h3 class="perfil-name">Eli</h3>
         </a>
 
         <a href="perfil.html" class="perfil-card">
-          <img src="imagenes/USER.png"  " class="perfil-avatar">
+          <img src="imagenes/USER.png"  " class="perfil-avatar" alt="user2">
           <h3 class="perfil-name">Hermy29</h3>
         </a>
 
         <a href="perfil.html" class="perfil-card">
-          <img src="imagenes/USER.png"  " class="perfil-avatar">
+          <img src="imagenes/USER.png"  " class="perfil-avatar" alt="user3">
           <h3 class="perfil-name">Cristian:D</h3>
         </a>
 
         <a href="perfil.html" class="perfil-card">
-          <img src="imagenes/USER.png"  " class="perfil-avatar">
+          <img src="imagenes/USER.png"  " class="perfil-avatar" alt="user4">
           <h3 class="perfil-name">SolDFA</h3>
         </a>
 
         <a href="perfil.html" class="perfil-card">
-          <img src="imagenes/USER.png"  " class="perfil-avatar">
+          <img src="imagenes/USER.png"  " class="perfil-avatar" alt="user5">
           <h3 class="perfil-name">Victor39</h3>
         </a>
 
         <a href="perfil.html" class="perfil-card">
-          <img src="imagenes/USER.png"  " class="perfil-avatar">
+          <img src="imagenes/USER.png"  " class="perfil-avatar" alt="user6">
           <h3 class="perfil-name">PedroPascal</h3>
         </a>
       </div>
