--- a/chat.html
+++ b/chat.html
@@ -18,7 +18,7 @@
 <nav class="vertical-navbar">
   <div class="text-center">
     <a class="navbar-brand" href="chat.html"> <!-- AQUI MERO VA LA IMAGEN -->
-      <img src="imagenes/TOGETHER.png"   class="navbar-logo img-fluid">
+      <img src="imagenes/TOGETHER.png"   class="navbar-logo img-fluid" alt="Logo">
     </a>
   </div>
   <ul class="nav flex-column">
@@ -63,42 +63,42 @@
     <ul class="nav flex-column w-100">
         <li class="nav-item">
             <a class="nav-link active" href="#">
-                <img src="imagenes/USER.png"  class="chat-icon me-2"> Victor39
+                <img src="imagenes/USER.png"  class="chat-icon me-2" alt="user1"> Victor39
             </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">
-              <img src="imagenes/GRUPO.png"  class="chat-icon me-2"> FAMILIA
+              <img src="imagenes/GRUPO.png"  class="chat-icon me-2" alt="group1"> FAMILIA
           </a>
       </li>
         <li class="nav-item">
             <a class="nav-link" href="#">
-                <img src="imagenes/USER.png"  class="chat-icon me-2"> Clark
+                <img src="imagenes/USER.png"  class="chat-icon me-2" alt="user2"> Eli
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">
-                <img src="imagenes/USER.png"  class="chat-icon me-2"> Cristian
+                <img src="imagenes/USER.png"  class="chat-icon me-2" alt="user3"> Cristian
             </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">
-              <img src="imagenes/GRUPO.png"  class="chat-icon me-2"> AMIGOS
+              <img src="imagenes/GRUPO.png"  class="chat-icon me-2" alt="group2"> AMIGOS
           </a>
       </li>
         <li class="nav-item">
             <a class="nav-link" href="#">
-                <img src="imagenes/USER.png" class="chat-icon me-2"> Hermy29
+                <img src="imagenes/USER.png" class="chat-icon me-2" alt="user4"> Hermy29
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">
-                <img src="imagenes/USER.png"  class="chat-icon me-2"> PedroPascal
+                <img src="imagenes/USER.png"  class="chat-icon me-2" alt="user5"> PedroPascal
             </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">
-              <img src="imagenes/GRUPO.png"  class="chat-icon me-2"> CLASE POI
+              <img src="imagenes/GRUPO.png"  class="chat-icon me-2" alt="group3"> CLASE POI
           </a>
       </li>
 
