--- a/crear-grupo.html
+++ b/crear-grupo.html
@@ -17,7 +17,7 @@
 <nav class="vertical-navbar">
   <div class="text-center">
     <a class="navbar-brand" href="chat.html"> <!-- AQUI MERO VA LA IMAGEN -->
-      <img src="imagenes/TOGETHER.png"   class="navbar-logo img-fluid">
+      <img src="imagenes/TOGETHER.png"   class="navbar-logo img-fluid" alt="Logo">
     </a>
   </div>
   <ul class="nav flex-column">
@@ -55,7 +55,7 @@
 
       <div class="grupo-info">
         <div class="grupo-foto">
-          <img id="grupo-avatar" src="imagenes/grupo.png"  class="grupo-avatar">
+          <img id="grupo-avatar" src="imagenes/grupo.png"  class="grupo-avatar" alt="group1">
           <button class="btn btn-cambiar-foto" onclick="document.getElementById('file-input').click();">Cambiar foto</button>
           <input type="file" id="file-input" style="display: none;" accept="image/*" onchange="cambiarFoto(event)">
         </div>
@@ -78,7 +78,7 @@
       <div class="integrantes-list">
 
         <div class="integrante-item d-flex align-items-center">
-          <img src="imagenes/USER.png"  " class="integrante-avatar">
+          <img src="imagenes/USER.png"  " class="integrante-avatar" alt="user1">
           <div class="integrante-info">
             <h3>SolDFA</h3>
           </div>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="integrante-item d-flex align-items-center">
-          <img src="imagenes/USER.png"  " class="integrante-avatar">
+          <img src="imagenes/USER.png"  " class="integrante-avatar" alt="user2">
           <div class="integrante-info">
             <h3>Hermy29</h3>
           </div>
@@ -94,7 +94,7 @@
         </div>
 
         <div class="integrante-item d-flex align-items-center">
-          <img src="imagenes/USER.png"  " class="integrante-avatar">
+          <img src="imagenes/USER.png"  " class="integrante-avatar" alt="user3">
           <div class="integrante-info">
             <h3>Victor39</h3>
           </div>
@@ -102,7 +102,7 @@
         </div>
 
         <div class="integrante-item d-flex align-items-center">
-          <img src="imagenes/USER.png"  " class="integrante-avatar">
+          <img src="imagenes/USER.png"  " class="integrante-avatar" alt="user4">
           <div class="integrante-info">
             <h3>PedroPascal</h3>
           </div>
@@ -110,9 +110,9 @@
         </div>
 
         <div class="integrante-item d-flex align-items-center">
-          <img src="imagenes/USER.png"  " class="integrante-avatar">
+          <img src="imagenes/USER.png"  " class="integrante-avatar" alt="user5">
           <div class="integrante-info">
-            <h3>Clark</h3>
+            <h3>Eli</h3>
           </div>
           <button class="btn btn-agregar ml-auto">Agregar</button>
         </div>
