--- a/perfil.html
+++ b/perfil.html
@@ -17,7 +17,7 @@
 <nav class="vertical-navbar">
   <div class="text-center">
     <a class="navbar-brand" href="chat.html"> <!-- AQUI MERO VA LA IMAGEN -->
-      <img src="imagenes/TOGETHER.png"   class="navbar-logo img-fluid">
+      <img src="imagenes/TOGETHER.png"   class="navbar-logo img-fluid" alt="Logo">
     </a>
   </div>
   <ul class="nav flex-column">
@@ -55,14 +55,14 @@
     <div class="profile-container">
       <!-- FOTO DE  PERFIL -->
       <div class="profile-picture">
-        <img src="imagenes/USER.png"  " class="user-avatar">
+        <img src="imagenes/USER.png"  " class="user-avatar" alt="user1">
       </div>
 
       <div class="profile-info">
 
-        <h2 class="username">Brenda01</h2>
-        <p class="name">Nombre: Brenda Elizabeth Bonilla Gonzalez</p>
-        <p class="email">Correo: brendaebg@together.com</p>
+        <h2 class="username">risc99</h2>
+        <p class="name">Nombre: Ricardo Issac Sánchez Clark</p>
+        <p class="email">Correo: risclark@together.com</p>
         <p class="time-in-app">Tiempo en la app: 6 meses</p>
       </div>
 
