--- a/recompensas.html
+++ b/recompensas.html
@@ -17,7 +17,7 @@
 <nav class="vertical-navbar">
   <div class="text-center">
     <a class="navbar-brand" href="chat.html"> <!-- AQUI MERO VA LA IMAGEN -->
-      <img src="imagenes/TOGETHER.png"   class="navbar-logo img-fluid">
+      <img src="imagenes/TOGETHER.png"   class="navbar-logo img-fluid" alt="Logo">
     </a>
   </div>
   <ul class="nav flex-column">
