--- a/chat.html
+++ b/chat.html
@@ -113,7 +113,7 @@
 <div class="main-content">
 <div class="chat-header">
   <div class="user-info">
-    <img src="imagenes/USER.png"  " class="user-avatar">
+    <img src="imagenes/USER.png"  " class="user-avatar" alt="user1">
     <span class="user-name">Victor39</span>
   </div>
 
@@ -146,7 +146,7 @@
     <div class="task-input-container">
       <input type="text" id="taskInput" placeholder="Ingresa tarea">
       <select id="taskAssignee">
-          <option value="Clark">Clark</option>
+          <option value="Clark">Eli</option>
           <option value="Veck">Veck</option>
           <option value="Sol">Sol</option>
           <option value="Hermy">Hermy</option>
