--- a/editar-perfil.html
+++ b/editar-perfil.html
@@ -65,11 +65,11 @@
       <form class="editar-form">
         <div class="form-group">
           <label for="username">Nombre de usuario:</label>
-          <input type="text" id="username" class="form-control" value="Brenda01">
+          <input type="text" id="username" class="form-control" value="risc99">
         </div>
         <div class="form-group">
           <label for="fullname">Nombre completo:</label>
-          <input type="text" id="fullname" class="form-control" value="Brenda Elizabeth Bonilla Gonzalez">
+          <input type="text" id="fullname" class="form-control" value="Ricardo Issac Sánchez Clark">
         </div>
       </form>
 
