--- a/llamada.html
+++ b/llamada.html
@@ -21,7 +21,7 @@
     </div>
 
     <!-- PERFIL -->
-    <h2 class="profile-name">Brenda01</h2>
+    <h2 class="profile-name">risc99</h2>
 
     <!-- BOTONES -->
     <div class="llamada-actions">
