--- a/videollamada.html
+++ b/videollamada.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="video-header p-3 border-bottom">
-        <h5 class="mb-0 text-white">Videollamada con Brenda01</h5>
+        <h5 class="mb-0 text-white">Videollamada de risc99</h5>
       </div>
       <!-- BOTONES -->
       <div class="video-controls p-3 text-center">
