--- a/busqueda.html
+++ b/busqueda.html
@@ -57,7 +57,7 @@
       <!-- BARRA DE BUSQUEDA -->
       <div class="search-bar">
         <input type="text" class="form-control" placeholder="Buscar por nombre de usuario...">
-        <button class="btn btn-buscar">
+        <button class="btn btn-buscar">Buscar 
           <i class="bi bi-search"></i>
         </button>
       </div>
