--- a/chat.html
+++ b/chat.html
@@ -56,7 +56,7 @@
     <div class="w-100 p-3">
         <form class="search-form">
             <div class="input-group">
-                <input type="text" class="form-control" aria-label="Buscar">
+                <label><input type="text" class="form-control" aria-label="Buscar"></label>
                 <button class="btn btn-outline-secondary" type="button">Buscar</button>
             </div>
         </form>
