--- a/crear-grupo.html
+++ b/crear-grupo.html
@@ -67,7 +67,7 @@
 
       <div class="search-bar">
         <input type="text" class="form-control" placeholder="Buscar integrantes...">
-        <button class="btn btn-buscar">
+        <button class="btn btn-buscar">Buscar 
           <i class="bi bi-search"></i>
         </button>
       </div>
