--- a/chat.html
+++ b/chat.html
@@ -56,7 +56,7 @@
     <div class="w-100 p-3">
         <form class="search-form">
             <div class="input-group">
-                <label><input type="text" class="form-control" aria-label="Buscar"></label>
+                <input type="text" class="form-control" aria-label="Buscar">
                 <button class="btn btn-outline-secondary" type="button">Buscar</button>
             </div>
         </form>
@@ -178,7 +178,7 @@
 
   <!-- BARRA PARA ESCRIBIR -->
   <div class="chat-input">
-      <input type="text" class="form-control">
+      <input type="text" class="form-control" aria-label="enviar">
       <button class="btn btn-primary">Enviar</button>
   </div>
 </div>
