--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <meta name="description" content="Log in your account or sign up.">
-  <title>Iniciar Sesión - TOGETHER</title>
+  <title>Iniciar Sesión - Connect</title>
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/index.css">
@@ -20,9 +20,9 @@
   <div class="main-container">
 
     <div class="presentation-container">
-      <h1>BIENVENIDO A TOGETHER</h1>
+      <h1>BIENVENIDO A CONNECT</h1>
       <p class="description">
-        Together es el lugar ideal para conectar, colaborar y crecer. Únete a la comunidad, comparte ideas, crea proyectosy haz amigos. ¡Comienza hoy mismo! 
+        Connect es el lugar ideal para conectar, colaborar y crecer. Únete a la comunidad, comparte ideas, crea proyectosy haz amigos. ¡Comienza hoy mismo! 
       </p>
       <div class="features">
         <p><i class="bi bi-people"></i> Conéctate con los demas</p>
