--- a/perfil.html
+++ b/perfil.html
@@ -63,7 +63,7 @@
 
         <h2 class="username">risc99</h2>
         <p class="name">Nombre: Ricardo Issac Sánchez Clark</p>
-        <p class="email">Correo: risclark@together.com</p>
+        <p class="email">Correo: risclark@connect.com</p>
         <p class="time-in-app">Tiempo en la app: 6 meses</p>
       </div>
 
@@ -82,9 +82,9 @@
         <span>En equipo</span>
       </div>
 
-      <div class="reward-item" data-bs-toggle="tooltip" title="Por crear una cuenta en Together">
+      <div class="reward-item" data-bs-toggle="tooltip" title="Por crear una cuenta en Connect">
         <i class="bi bi-emoji-smile"></i>
-        <span>Together</span>
+        <span>Connect</span>
       </div>
     </div>
   </div>
