--- a/recompensas.html
+++ b/recompensas.html
@@ -81,8 +81,8 @@
         <div class="recompensa-item">
           <i class="bi bi-emoji-smile"></i>
           <div class="recompensa-info">
-            <h3>Together</h3>
-            <p>Por crear una cuenta en Together.</p>
+            <h3>Connect</h3>
+            <p>Por crear una cuenta en Connect.</p>
           </div>
           <button class="btn btn-activar">Activar</button>
         </div>
